apply recursion fix from 7a231d3 and clean up